github pages config

--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "homepage":"https://c-h-o-c-o-l-a-t-e.github.io/blog/",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node app.js"
+    "start":"node app.js",
+    "predeploy":"yarn deploy",
+    "deploy":"gh-pages -d build"
   },
   "author": "Myself",
   "license": "ISC",
