--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "engines": {
+    "node": "22.x"
+  },
   "homepage": "https://c-h-o-c-o-l-a-t-e.github.io/blog/",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
